# flight_simulator

./: CMakeLists.txt  README.md
include/: cockpit.h  geometry.h  landscape.h  ship.h
src/: fly.cpp  landscape.cpp
